--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -166,4 +166,17 @@ body {
       .services-right-item .services-right-image {
         width: 30%; }
 
+.testi {
+  background-image: url("../../images/img15.png");
+  width: 100%;
+  background-size: cover;
+  height: 100vh;
+  max-height: 1005px;
+  max-width: 1920px;
+  padding: 0 12.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
 /*# sourceMappingURL=style.css.map */
