--- a/project/styles/style.scss
+++ b/project/styles/style.scss
@@ -221,3 +221,16 @@ body{
       }
     }
   }
+  .testi{
+    background-image: url("../../images/img15.png");
+    width: 100%;
+    background-size: cover;
+    height: 100vh;
+    max-height: 1005px;
+    max-width: 1920px;
+    padding:0 12.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
